<?xml version="1.0"?>
<package format="2">
  <name>jetson_camera</name>
  <version>0.0.0</version>
  <description>The jetson_camera package</description>

  <maintainer email="sf@todo.todo">sf</maintainer>


  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
 
  <depend>rclcpp</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend> 
  <depend>sensor_msgs</depend> 
  <depend>image_common</depend>
  <depend>vision_opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
